tried to fix logo font size on mobile

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ a:hover {
 
 .main h1 {
 	color: var(--theme-color-dark);
-	font-size: 8em;
+	font-size: 8rem;
 	font-family: Jaapokki;
 	border: 10px solid var(--theme-color-dark);
 	display: inline;
